# Desenvolvimento-de-IA

./: eda_churn.ipynb  pyproject.toml
