[tool.poetry]
name = "code-ia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.3"
matplotlib = "^3.10.7"

[tool.poetry.dev-dependencies]
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
